Fix bug in counting max-score in production and heading alignment

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@
   font-family: 'Unown', sans-serif;
   display: grid;
   place-content: center;
+  text-align: center;
   font-size: 5rem;
   background-color: var(--yellow);
   padding: var(--small-space);
